--- a/app/src/main/res/layout/draw_menu_layout.xml
+++ b/app/src/main/res/layout/draw_menu_layout.xml
@@ -24,7 +24,7 @@
             android:layout_height="154dp">
 
             <TextView
-                android:id="@+id/id_draw_menu_item_backup"
+                android:id="@+id/tv_draw_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
@@ -35,10 +35,10 @@
                 android:textSize="15sp"/>
 
             <TextView
-                android:id="@+id/id_draw_menu_item_phone"
+                android:id="@+id/tv_draw_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/id_draw_menu_item_backup"
+                android:layout_below="@id/tv_draw_name"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="9dp"
                 android:text="13588432197"
