修复图片显示bug,图片压缩逻辑优化

--- a/app/src/main/res/layout/Fault_image_item_holder.xml
+++ b/app/src/main/res/layout/Fault_image_item_holder.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/iv_fault"
     android:layout_width="90dp"
-    android:scaleType="fitXY"
+    android:scaleType="centerCrop"
     android:layout_height="90dp"
 />
