--- a/app/src/main/res/layout/fee_type_dialog_view.xml
+++ b/app/src/main/res/layout/fee_type_dialog_view.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical"
-    app:cardCornerRadius="5dp"
->
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:background="@color/white"
-                  android:orientation="vertical">
+    app:cardCornerRadius="5dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -21,12 +22,13 @@
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
             android:text="人工费类别"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:background="@color/background_gray"/>
+            android:background="@color/background_gray" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
