--- a/app/src/main/res/layout/fragment_inner_reports_detail.xml
+++ b/app/src/main/res/layout/fragment_inner_reports_detail.xml
@@ -69,29 +69,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/iv_add1"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:scaleType="centerCrop"
-                    android:visibility="gone"
-                    android:src="@mipmap/default_logo"/>
-                <ImageView
-                    android:id="@+id/iv_add2"
-                    android:scaleType="centerCrop"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:layout_marginLeft="5dp"
-                    android:visibility="gone"
-                    android:src="@mipmap/default_logo"/>
-                <ImageView
-                    android:id="@+id/iv_add3"
-                    android:scaleType="centerCrop"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:layout_marginLeft="5dp"
-                    android:visibility="gone"
-                    android:src="@mipmap/default_logo"/>
+   <android.support.v7.widget.RecyclerView
+       android:id="@+id/rv_list"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"/>
+
             </LinearLayout>
 
         </LinearLayout>
