--- a/app/src/main/res/layout/inner_reports_item_holder.xml
+++ b/app/src/main/res/layout/inner_reports_item_holder.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
+    app:cardBackgroundColor="@color/white"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     app:cardCornerRadius="10dp"
