--- a/app/src/main/res/layout/myorder_finnished_item_holder.xml
+++ b/app/src/main/res/layout/myorder_finnished_item_holder.xml
@@ -1,78 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    android:layout_marginTop="10dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    app:cardCornerRadius="10dp"
->
-    <!--横向的-->
-    <LinearLayout
+    android:layout_marginTop="10dp"
+    android:orientation="vertical">
+    <TextView
+        android:id="@+id/tv_year"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:text="2017"
+        android:textColor="@color/TC_2"
+        android:visibility="gone" />
+
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:orientation="vertical"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp">
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="3dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="10dp"
+        >
+        <!--横向的-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingBottom="15dp"
-            android:paddingTop="15dp">
-            <TextView
-                android:id="@+id/tv_type"
-                android:layout_width="wrap_content"
+            android:background="@android:color/white"
+            android:orientation="vertical"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/TC_2"
-                android:textSize="15sp"
-                tools:text="电梯"/>
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingBottom="15dp"
+                android:paddingTop="15dp">
+
+                <TextView
+                    android:id="@+id/tv_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/TC_2"
+                    android:textSize="15sp"
+                    tools:text="电梯" />
+
+                <TextView
+                    android:id="@+id/tv_picture_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginLeft="27dp"
+                    android:drawableLeft="@drawable/rob_hall_list_icon"
+                    android:drawablePadding="5dp"
+                    android:textColor="@color/TC_2"
+                    android:textSize="15sp"
+                    tools:text="2" />
+
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:textColor="@color/TC_2"
+                    android:textSize="15sp"
+                    tools:text="12月9日" />
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/tv_picture_num"
+                android:id="@+id/tv_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="15dp"
+                android:paddingTop="15dp"
+                android:textColor="@color/black"
+                android:textSize="13sp"
+                tools:text="出水口怎么又坏了？" />
+
+            <TextView
+                android:id="@+id/tv_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:layout_marginLeft="27dp"
-                android:drawableLeft="@drawable/rob_hall_list_icon"
-                android:drawablePadding="5dp"
-                android:textColor="@color/TC_2"
-                android:textSize="15sp"
-                tools:text="2"
-            />
-            <TextView
-                android:id="@+id/tv_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:textColor="@color/TC_2"
-                android:textSize="15sp"
-                tools:text="12月9日"/>
+                android:layout_marginBottom="15dp"
+                android:text="待服务"
+                android:textColor="@color/app_primary_color" />
+
         </LinearLayout>
-        <TextView
-            android:id="@+id/tv_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="15dp"
-            android:paddingTop="15dp"
-            android:textColor="@color/black"
-            android:textSize="13sp"
-            tools:text="出水口怎么又坏了？"/>
-        <TextView
-            android:id="@+id/tv_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginBottom="15dp"
-            android:text="待服务"
-            android:textColor="@color/app_primary_color"/>
-
-    </LinearLayout>
 
 
-</android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
