--- a/app/src/main/res/layout/myorder_under_way_item_holder.xml
+++ b/app/src/main/res/layout/myorder_under_way_item_holder.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
+    app:cardBackgroundColor="@color/white"
     android:layout_marginRight="10dp"
     app:cardCornerRadius="10dp"
 >
