--- a/app/src/main/res/layout/rob_hall_item_holder.xml
+++ b/app/src/main/res/layout/rob_hall_item_holder.xml
@@ -3,13 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_marginTop="10dp"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
+    app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="10dp"
->
+    style="@style/common_normal_cardview">
     <!--横向的-->
     <LinearLayout
         android:layout_width="match_parent"
