--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
     <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
     <!--<item name="colorAccent">@color/colorAccent</item>-->
     <!--</style>-->
-    <style name="ToolBarTheme" parent="AppTheme.Base"/>
+    <style name="ToolBarTheme" parent="AppTheme.Base" />
 
     <style name="AppTheme.Base" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/app_primary_color</item>
@@ -49,15 +49,23 @@
         <item name="android:textAllCaps">false</item>
     </style>
     <!--星星的样式-->
-        <style name="foodRatingBar" parent="@android:style/Widget.RatingBar">
-            <item name="android:progressDrawable">@drawable/ratingstars</item>
-            <item name="android:minHeight">13dip</item>
-            <item name="android:maxHeight">30dip</item>
-        </style>
-<!--15dp黑-->
+    <style name="foodRatingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/ratingstars</item>
+        <item name="android:minHeight">13dip</item>
+        <item name="android:maxHeight">30dip</item>
+    </style>
+    <!--15dp黑-->
     <style name="normal_content_text">
 
         <item name="android:textColor">@color/TC_1</item>
         <item name="android:textSize">@dimen/text_normal_size</item>
+    </style>
+    <!--卡片布局的样式-->
+    <style name="common_normal_cardview">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
     </style>
 </resources>
