表单提交接口调试完成,访客列表重构

--- a/app/src/main/res/layout/base_fragment_refrsh_load.xml
+++ b/app/src/main/res/layout/base_fragment_refrsh_load.xml
@@ -1,21 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_menu_inner_reports"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.tianchuang.ihome_b.activity.MenuInnerReportsActivity">
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeLayout"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
         <android.support.v7.widget.RecyclerView
-            android:background="@color/background_gray"
             android:id="@+id/rv_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </android.support.v4.widget.SwipeRefreshLayout>
+            android:layout_height="match_parent"
+            android:background="@color/background_gray"
+            android:overScrollMode="never"
+            android:scrollbars="none" />
 
-</FrameLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
+    <TextView
+        android:id="@+id/tv_end_load"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/background_gray"
+        android:gravity="center_horizontal"
+        android:padding="10dp"
+        android:text="没有更多数据"
+        android:textColor="@color/TC_2"
+        android:visibility="gone" />
+</LinearLayout>
