--- a/app/src/main/res/layout/activity_visitor_list.xml
+++ b/app/src/main/res/layout/activity_visitor_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding ="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -29,7 +28,8 @@
             android:layout_centerInParent="true"
             android:text="我的访客"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+             />
 
         <ImageView
             android:id="@+id/search_icon"
@@ -40,36 +40,50 @@
             android:layout_marginRight="15dp"
             android:src="@drawable/search_icon" />
 
-        <android.support.v7.widget.SearchView
-            android:id="@+id/search_view"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
+        <LinearLayout
+            android:id="@+id/ll_search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="30dp"
             android:layout_marginRight="10dp"
             android:layout_toLeftOf="@id/search_icon"
             android:background="@drawable/bg_searchedit_press_shape"
-            android:iconifiedByDefault="false"
-            android:maxWidth="270dp"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:searchHintIcon="@null"
-            android:visibility="gone"
-            app:defaultQueryHint="根据访客手机号搜索" />
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
+            <EditText
+                android:id="@+id/et_search_text"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:inputType="phone"
+                android:gravity="center_vertical"
+                android:hint="根据访客手机号搜索"
+                android:iconifiedByDefault="false"
+                android:maxWidth="270dp"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"
+                android:textColor="@color/white"
+                android:textSize="12sp" />
+
+            <ImageView
+                android:id="@+id/iv_search_request"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:paddingRight="15dp"
+                android:paddingTop="5dp"
+                android:src="@drawable/search_icon" />
+        </LinearLayout>
     </RelativeLayout>
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/mSwipeRefreshLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_visitor_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/background_gray" />
-
-    </android.support.v4.widget.SwipeRefreshLayout>
-
+    <FrameLayout
+        android:id="@+id/fl_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
