--- a/app/src/main/res/layout/base_progress_view.xml
+++ b/app/src/main/res/layout/base_progress_view.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
-              android:layout_height="wrap_content"
-              android:background="@color/white"
-              android:clickable="true"
-              android:gravity="center"
-              android:paddingBottom="10dp"
-              android:paddingTop="10dp">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:clickable="true"
+    android:gravity="center_vertical"
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp">
 
     <ProgressBar
-        android:layout_width="50dp"
-        android:layout_height="50dp"/>
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_weight="1" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="6dp"
+        android:layout_weight="1"
         android:text="@string/loading_text"
-        android:textColor="@color/TC_1"/>
+        android:textColor="@color/TC_1" />
 </LinearLayout>
