--- a/app/src/main/res/layout/myform_fragment_refrsh_load.xml
+++ b/app/src/main/res/layout/myform_fragment_refrsh_load.xml
@@ -20,5 +20,23 @@
             android:background="@color/background_gray"
             android:overScrollMode="never"
             android:scrollbars="none" />
+
     </android.support.v4.widget.SwipeRefreshLayout>
+    <LinearLayout
+        android:id="@+id/ll_add_form"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:gravity="center_horizontal"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/add_form"
+            android:drawablePadding="5dp"
+            android:gravity="center_horizontal"
+            android:text="表单申报"
+            android:textColor="@color/app_primary_color" />
+    </LinearLayout>
 </LinearLayout>
