--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="text_normal_size">15sp</dimen>
+    <dimen name="text_small_size">13sp</dimen>
 
 
     <dimen name="H0">10dp</dimen>
