--- a/app/src/main/res/layout/list_multi_image_holder.xml
+++ b/app/src/main/res/layout/list_multi_image_holder.xml
@@ -15,6 +15,8 @@
         android:id="@+id/tv_images_name"
         android:layout_height="wrap_content" />
     <android.support.v7.widget.RecyclerView
+        android:overScrollMode="never"
+        android:scrollbars="none"
         android:id="@+id/rv_image_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
