--- a/app/src/main/res/layout/list_multi_radio_holder.xml
+++ b/app/src/main/res/layout/list_multi_radio_holder.xml
@@ -15,6 +15,8 @@
         android:text="桌子：" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_radio_list"
+        android:overScrollMode="never"
+        android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
          />
