--- a/app/src/main/res/layout/inner_reports_item_holder.xml
+++ b/app/src/main/res/layout/inner_reports_item_holder.xml
@@ -1,51 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="10dp"
     app:cardBackgroundColor="@color/white"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    app:cardCornerRadius="10dp"
->
+    app:cardCornerRadius="10dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="vertical"
         android:padding="15dp">
+
         <TextView
             android:id="@+id/tv_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="某某某某某地区的一个某某部位又坏了，发动不
+            tools:text="某某某某某地区的一个某某部位又坏了，发动不
 起来，尽快修理，可参考图片。"
 
             android:textColor="@color/TC_1"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
+
         <TextView
             android:id="@+id/tv_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="宋智孝/3-2-702"
+            tools:text="宋智孝/3-2-702"
             android:textColor="@color/TC_2"
-            android:textSize="13sp"/>
+            android:textSize="13sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/tv_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2016/12/13  08:30"
+                tools:text="2016/12/13  08:30"
                 android:textColor="@color/TC_2"
-                android:textSize="13sp"/>
+                android:textSize="13sp" />
+
             <TextView
                 android:id="@+id/tv_status"
                 android:layout_width="match_parent"
@@ -53,7 +58,7 @@
                 android:gravity="right"
                 android:text="处理中"
                 android:textColor="@color/TC_3"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
