--- a/app/src/main/res/layout/task_control_point_item_holder.xml
+++ b/app/src/main/res/layout/task_control_point_item_holder.xml
@@ -56,10 +56,6 @@
             android:textColor="@color/app_primary_color"
             android:textSize="15sp" />
     </RelativeLayout>
-    <FrameLayout
-        android:id="@+id/fl_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -72,7 +68,8 @@
         android:layout_height="40dp"
         android:layout_gravity="center_horizontal"
         android:background="@color/white"
-        android:drawableRight="@drawable/to_down"
+        android:drawablePadding="5dp"
+        android:drawableRight="@mipmap/menu_arrow"
         android:gravity="right|center_vertical"
         android:orientation="horizontal"
         android:paddingLeft="15dp"
