--- a/app/src/main/res/layout/form_submit_footer_holder.xml
+++ b/app/src/main/res/layout/form_submit_footer_holder.xml
@@ -20,6 +20,7 @@
         android:background="@color/app_primary_color"
         android:gravity="center"
         android:paddingBottom="15dp"
+        android:layout_marginBottom="10dp"
         android:paddingTop="15dp"
         android:text="确定"
         android:textColor="@color/white" />
