--- a/app/src/main/res/layout/fragment_inner_reports.xml
+++ b/app/src/main/res/layout/fragment_inner_reports.xml
@@ -69,6 +69,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                android:maxEms="100"
                 android:layout_marginTop="7dp"
                 android:background="@color/background_gray"
                 android:gravity="start"
