--- a/app/src/main/res/layout/fragment_inner_reports_detail.xml
+++ b/app/src/main/res/layout/fragment_inner_reports_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -19,13 +19,15 @@
             android:paddingBottom="20dp"
             android:paddingLeft="15sp"
             android:paddingTop="20dp">
+
             <TextView
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="abyss"
-                android:id="@+id/tv_name"
                 android:textColor="@color/TC_1"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
+
             <TextView
                 android:id="@+id/tv_department_name"
                 android:layout_width="wrap_content"
@@ -33,7 +35,7 @@
                 android:layout_marginTop="10dp"
                 android:text="工程部"
                 android:textColor="@color/TC_2"
-                android:textSize="13sp"/>
+                android:textSize="13sp" />
         </LinearLayout>
         <!--body-->
         <LinearLayout
@@ -44,6 +46,7 @@
             android:orientation="vertical"
             android:paddingBottom="20dp"
             android:paddingTop="10dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -51,10 +54,13 @@
                 android:layout_marginLeft="15dp"
                 android:text="报事内容"
                 android:textColor="@color/TC_2"
-                android:textSize="15sp"/>
-            <View android:layout_width="match_parent"
-                  android:layout_height="1dp"
-                  android:background="@color/background_gray"/>
+                android:textSize="15sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/background_gray" />
+
             <TextView
                 android:id="@+id/tv_content"
                 android:layout_width="wrap_content"
@@ -63,20 +69,26 @@
                 android:layout_marginTop="13dp"
                 android:text="文字描述:"
                 android:textColor="@color/TC_1"
-                android:textSize="15sp"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:orientation="horizontal">
-   <android.support.v7.widget.RecyclerView
-       android:id="@+id/rv_list"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"/>
+                android:textSize="15sp" />
 
-            </LinearLayout>
+
+
+                <TextView
+                    android:layout_marginTop="13dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:text="报事图片:"
+                    android:textColor="@color/TC_1"
+                    android:textSize="15sp" />
+                <android.support.v7.widget.RecyclerView
+                    android:layout_marginLeft="15dp"
+                    android:id="@+id/rv_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
         </LinearLayout>
+
         <Button
             android:id="@+id/statusBt"
             android:layout_width="fill_parent"
@@ -86,14 +98,13 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="30dp"
-            android:clickable="false"
             android:background="@drawable/login_login_button_selector"
             android:gravity="center"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
             android:text="状态"
             android:textColor="@color/white"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
     </LinearLayout>
 
 </ScrollView>
