--- a/app/src/main/res/layout/fragment_order_fee_detail.xml
+++ b/app/src/main/res/layout/fragment_order_fee_detail.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/background_gray"
-            android:orientation="vertical">
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_marginTop="10dp"
-                  android:background="@color/background_gray"
-                  android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background_gray"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@color/background_gray"
+        android:orientation="vertical">
+
         <com.tianchuang.ihome_b.view.ItemRemoveRecyclerView
             android:id="@+id/rv_item_remove_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            />
+            android:background="@color/white" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,11 +27,13 @@
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:paddingTop="15dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="总计"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
+
             <TextView
                 android:id="@+id/tv_sum_price"
                 android:layout_width="match_parent"
@@ -36,8 +41,9 @@
                 android:gravity="right"
                 android:text="¥0.00"
                 android:textColor="@color/TC_3"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,6 +53,7 @@
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:paddingTop="15dp">
+
             <TextView
                 android:id="@+id/tv_add_material"
                 android:layout_width="wrap_content"
@@ -60,7 +67,8 @@
                 android:paddingTop="13dp"
                 android:text="添加材料"
                 android:textColor="@color/TC_2"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
+
             <TextView
                 android:id="@+id/tv_add_charge"
                 android:layout_width="wrap_content"
@@ -75,30 +83,39 @@
                 android:paddingTop="13dp"
                 android:text="添加人工费"
                 android:textColor="@color/TC_2"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
         </LinearLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="50dp"
             android:layout_marginTop="50dp"
-            android:gravity="bottom"
-        >
+            android:gravity="bottom">
+
             <LinearLayout
                 android:id="@+id/ll_body"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="15dp"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
-                <CheckBox android:id="@+id/cb_isunder_line"
-                          android:layout_width="13dp"
-                          android:layout_height="13dp"
-                          android:background="@drawable/protocol_checkbox_selector"
-                          android:button="@null"
-                          android:checked="false"/>
+                android:orientation="horizontal"
+                >
+
+                <CheckBox
+                    android:id="@+id/cb_isunder_line"
+                    android:layout_width="wrap_content"
+                        android:paddingTop="15dp"
+                    android:paddingLeft="10dp"
+                    android:paddingBottom="15dp"
+                    android:layout_height="wrap_content"
+                    android:button="@null"
+                    android:text="      "
+                    android:checked="false"
+                    android:drawableRight="@drawable/protocol_checkbox_selector" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -106,8 +123,9 @@
                     android:gravity="center"
                     android:text="用户线下完成付款"
                     android:textColor="@color/TC_1"
-                    android:textSize="13sp"/>
+                    android:textSize="13sp" />
             </LinearLayout>
+
             <Button
                 android:id="@+id/bt_sure"
                 android:layout_width="fill_parent"
@@ -116,14 +134,14 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="15dp"
                 android:background="@drawable/login_login_button_selector"
                 android:gravity="center"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:text="确定"
                 android:textColor="@color/white"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
 
         </RelativeLayout>
     </LinearLayout>
