添加小红点

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -105,7 +105,10 @@
             </LinearLayout>
 
         </LinearLayout>
-
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swipeLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
         <android.support.v7.widget.RecyclerView
             android:scrollbars="none"
             android:id="@+id/rv_list"
@@ -113,6 +116,7 @@
             android:layout_height="match_parent"
             android:background="@color/background_gray"
              />
+</android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 
     <FrameLayout
