--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/id_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,7 +24,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="5dp"
                 android:padding="10dp"
-                android:src="@mipmap/menu"/>
+                android:src="@mipmap/menu" />
 
             <TextView
                 android:id="@+id/spinner"
@@ -39,8 +38,19 @@
                 android:gravity="center_horizontal"
                 android:text="海创园小区"
                 android:textColor="@color/white"
-                android:textSize="18sp"
-            />
+                android:textSize="18sp" />
+
+            <ImageView
+                android:id="@+id/iv_little_red"
+                android:layout_width="5dp"
+                android:layout_height="5dp"
+                android:layout_alignTop="@id/spinner"
+                android:layout_marginLeft="-6dp"
+                android:layout_marginTop="-2dp"
+                android:layout_toRightOf="@id/spinner"
+                android:src="@drawable/little_red"
+                android:visibility="visible" />
+
             <ImageView
                 android:id="@+id/iv_right"
                 android:layout_width="wrap_content"
@@ -50,16 +60,15 @@
                 android:layout_marginRight="5dp"
                 android:gravity="center"
                 android:padding="10dp"
-                android:src="@mipmap/rob_hall"
-            />
+                android:src="@mipmap/rob_hall" />
         </RelativeLayout>
 
         <FrameLayout
             android:id="@+id/main_fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
     </LinearLayout>
 
-    <include layout="@layout/draw_menu_layout"/>
+    <include layout="@layout/draw_menu_layout" />
 
 </android.support.v4.widget.DrawerLayout>
