--- a/app/src/main/res/layout/custom_dialog_view2.xml
+++ b/app/src/main/res/layout/custom_dialog_view2.xml
@@ -1,44 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="20px">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/cardview_light_background"
         android:orientation="vertical">
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:gravity="center"
-                  android:id="@+id/tv_tip"
-                  android:paddingBottom="15.5dp"
-                  android:paddingLeft="22.5dp"
-                  android:paddingRight="22.5dp"
-                  android:paddingTop="15.5dp"
-                  android:text="@string/register_custom_dialog_tip"
-                  android:textColor="@color/TC_1"
-                  android:textSize="15sp"/>
-        <View android:layout_width="match_parent"
-              android:background="@color/lightGrey"
-              android:layout_height="1dp"/>
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:orientation="horizontal">
 
-            <TextView android:layout_width="0dp"
-                      android:id="@+id/tv_sure"
-                      android:layout_height="wrap_content"
-                      android:layout_weight="1"
-                      android:gravity="center"
-                      android:paddingTop="11.5dp"
-                      android:paddingBottom="11.5dp"
-                      android:text="@string/material_dialog_sure"
-                      android:textColor="@color/app_primary_color"
-                      android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/tv_tip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:minLines="3"
+            android:paddingBottom="15.5dp"
+            android:paddingLeft="22.5dp"
+            android:paddingRight="22.5dp"
+            android:paddingTop="15.5dp"
+            android:text="@string/register_custom_dialog_tip"
+            android:textColor="@color/TC_1"
+            android:textSize="15sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/lightGrey" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_sure"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:paddingBottom="11.5dp"
+                android:paddingTop="11.5dp"
+                android:text="@string/material_dialog_sure"
+                android:textColor="@color/app_primary_color"
+                android:textSize="18sp" />
 
         </LinearLayout>
     </LinearLayout>
