--- a/app/src/main/res/layout/property_list_item_holder.xml
+++ b/app/src/main/res/layout/property_list_item_holder.xml
@@ -62,13 +62,14 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/little_red"
 
-        />
+        <TextView
+            android:id="@+id/tv_little_red"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"
+            />
+
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
