控制点任务详情修改

--- a/app/src/main/res/layout/activity_control_point_detail.xml
+++ b/app/src/main/res/layout/activity_control_point_detail.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mvp.ui.activity.ManageNotificationActivity">
+    tools:context="com.tianchuang.ihome_b.mvp.ui.activity.ControlPointDetailActivity">
 
 </android.support.constraint.ConstraintLayout>
