--- a/app/src/main/res/layout/fragment_task_control_point_detail.xml
+++ b/app/src/main/res/layout/fragment_task_control_point_detail.xml
@@ -68,6 +68,29 @@
             android:background="@color/white"
             android:overScrollMode="never"
             android:scrollbars="none" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_formlist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:overScrollMode="never"
+            android:scrollbars="none" />
+        <Button
+            android:id="@+id/loginBt"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/login_login_button_selector"
+            android:gravity="center"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:text="执行"
+            android:textColor="@color/white"
+            android:textSize="15sp"/>
     </LinearLayout>
 </ScrollView>
 
